[package]
name = "rock-matching-server"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
rand = "0.10.2"
rock-matching-engine = { path = "../engine" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tokio-util = "0.7.18"
